<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainbackground"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <TextView
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent"
        android:gravity="center"
        android:text="@string/menu_title"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <Button
            android:id="@+id/btn_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item1"
            android:textSize="@dimen/FontSize" />

        <Button
            android:id="@+id/btn_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item2"
            android:textSize="@dimen/FontSize" />

        <Button
            android:id="@+id/btn_item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item3"
            android:textSize="@dimen/FontSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_yhc"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/company"
            android:textSize="@dimen/FontSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/website"
            android:textSize="@dimen/FontSize" />

    </LinearLayout>


</RelativeLayout>